--- a/src/app.scss
+++ b/src/app.scss
@@ -2,25 +2,25 @@
 $bluegrey: rgb(221, 40, 164);
 
 h1 {
-	padding: 20px;
-	background: $bluegrey;
-	color: #dedede;
-	text-shadow: 0 1px 1px rgba(#000, .5);
+    padding: 20px;
+    background: $bluegrey;
+    color: #dedede;
+    text-shadow: 0 1px 1px rgba(#000, 0.5);
 }
 
 body,
 html {
-	height: 100%;
-	margin: 0;
-	padding: 0;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 #map {
-	height: 100%;
+    height: 100%;
 }
 
 nav {
-	position: absolute;
-	top: 1px;
-	left: 1px;
+    position: absolute;
+    top: 1px;
+    left: 1px;
 }
