--- a/src/app.scss
+++ b/src/app.scss
@@ -1,26 +1,47 @@
 /* src/style.scss */
-$bluegrey: rgb(221, 40, 164);
+$bluegrey: rgba(221, 40, 164, .4);
 
 h1 {
-    padding: 20px;
-    background: $bluegrey;
-    color: #dedede;
-    text-shadow: 0 1px 1px rgba(#000, 0.5);
+  padding: 20px;
+  background: $bluegrey;
+  color: #dedede;
+  text-shadow: 0 1px 1px rgba(#000, 0.5);
 }
 
 body,
 html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: grid;
+  grid-template-columns: 300px 1fr;
 }
 
 #map {
-    height: 100%;
+  height: 100vh;
 }
 
 nav {
-    position: absolute;
-    top: 1px;
-    left: 1px;
+  height: 100vh;
+  background-color: $bluegrey;
+  overflow-y: scroll;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+.placesList {
+  list-style: none;
+  padding: 0;
+
+  li {
+    font-size: 1.25em;
+
+    &:not(last-child) {
+      padding-bottom: 0.4em;
+    }
+  }
 }
